# inrol_uwb_localization

./: .gitignore  README.md  requirements.txt
c++/: .clang-format  CMakeLists.txt
c++/app/: CMakeLists.txt  align_estimated_results.cpp  filtering_state_estimation.cpp  full_batch_optimization.cpp  match_spline_to_colmap_traj.cpp  model_calibration.cpp  parse_colmap_result.cpp  scale_matching_trajectory_using_uwb.cpp
c++/libinroluwb/: CMakeLists.txt
c++/libinroluwb/filter/: filter_math_utility.cpp  filter_math_utility.hpp  jacobian.cpp  jacobian.hpp  kalman_filter.cpp  kalman_filter.hpp
c++/libinroluwb/geometry/: camera.hpp  feature.cpp  feature.hpp  measurements.hpp  pose.cpp  pose.hpp
c++/libinroluwb/optimizer/: align.cpp  align.hpp  batch.cpp  batch.hpp  calibration.cpp  calibration.hpp  logging.hpp  match.cpp  match.hpp  scale.cpp  scale.hpp
c++/libinroluwb/optimizer/functor/: anchor.hpp  bias.hpp  imu.hpp  uwb.hpp  vision.hpp
c++/libinroluwb/optimizer/math/: harmonics.cpp  harmonics.hpp  spline.hpp
c++/libinroluwb/utils/: algorithm.hpp  binary.cpp  binary.hpp  directory.cpp  directory.hpp  endian.hpp  param.cpp  param.hpp  text.cpp  text.hpp
example/anchor_self_calibration1/parsed_dataset/: anchor.txt  cam_pose.txt  images.txt  imu.txt  uwb.txt
example/anchor_self_calibration2/parsed_dataset/: anchor.txt  cam_pose.txt  images.txt  imu.txt  uwb.txt
example/config/: anchor_prior1.yaml  anchor_prior2.yaml  parameter.yaml  project_directories.yaml
example/filtering_state_estimation1/parsed_dataset/: anchor.txt  imu.txt  imu_pose.txt  uwb.txt
example/filtering_state_estimation2/parsed_dataset/: anchor.txt  imu.txt  imu_pose.txt  uwb.txt
example/model_calibration/parsed_dataset/: anchor.txt  uwb.txt
example/model_test/parsed_dataset/: tag_pose.txt  uwb.txt
python/: analyze_trajectories.py  create_colmap_prj.py  plot_anchor_poses.py  plot_error_histogram.py
python/utils/: colmap_params.py  text.py  util_colmap.py
script/: 00-1_configure_c++_project.sh  00-2_build_c++_project.sh  01-1_model_calibration_A.sh  01-2_model_calibration_B.sh  01-3_model_calibration_C.sh  01-4_plot_uwb_error_histogram.sh  02-1_create_colmap_prj.sh  02-2_parse_colmap_result.sh  02-3_match_bspline_to_colmap_traj.sh  02-4_scale_matching_traj.sh  02-5_full_batch_optimization_A.sh  02-6_full_batch_optimization_B.sh  02-7_full_batch_optimization_C.sh  02-8_align_estimated_results.sh  02-9_plot_anchor_poses.sh  03-1_kalman_filter_A.sh  03-2_kalman_filter_AH.sh  03-3_kalman_filter_B.sh  03-4_kalman_filter_BH.sh  03-5_kalman_filter_C.sh  03-6_analyze_trajectories.sh
